# venus-glow

./: .gitignore  Cargo.toml  main.py  pyproject.toml
src/: acos.rs  angle_sun_earth_venus.py  angle_sun_earth_venus.rs  angle_sun_venus_earth.py  angle_sun_venus_earth.rs  angle_venus_sun_earth.py  angle_venus_sun_earth.rs  date_between_the_last_inferior_conjunction.py  date_between_the_last_inferior_conjunction.rs  distance_earth_venus.py  distance_earth_venus.rs  fifth_choice.rs  first_choice.rs  fourth_choice.rs  main.py  main.rs  second_choice.rs  third_choice.rs
