[tool.poetry]

name = "Venus glow"
version = "0.1.0"
description = "Program that determines the brightness of the planet Venus and calculates the relative position of Venus and Earth when the brightness of Venus is maximum."
authors = ["marcosfbc"]

[tool.poetry.dependencies]

python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]

requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
